BusOne/src/objects/EM_Speaker_Qualification_vod__c.object
<CustomObject>
    <description>Used to store records of which topics a speaker has been trained on and which services a speaker can provide.</description>
    <fields>
        <fullName>Contract_Line_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contract data associated to the contracted speaker service.</description>
        <label>Contract Line</label>
        <referenceTo>Contract_Line_vod__c</referenceTo>
        <relationshipLabel>Speaker Qualifications</relationshipLabel>
        <relationshipName>Speaker_Qualifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Partner_Status_vod__c</fullName>
        <description>The status of the contract partner record that associated a contract to a speaker.</description>
        <label>Contract Partner Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Activated_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Status_vod__c</fullName>
        <description>The status of the contract that includes the speaker&apos;s services.</description>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft_vod</fullName>
                </value>
                <value>
                    <fullName>In_Approval_Process_vod</fullName>
                </value>
                <value>
                    <fullName>Activated_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Date_vod__c</fullName>
        <description>The expiration date of the training or contracted service.</description>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>External_ID_vod__c</fullName>
        <description>External ID</description>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Qualification_Name_vod__c</fullName>
        <description>The name of the contracted service or topic training received by the speaker.</description>
        <formula>Qualification_vod__r.Name_vod__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Qualification Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Qualification_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The contracted service or topic training received by the speaker.</description>
        <label>Qualification</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Speaker_Service_vod</value>
            </filterItems>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Speaker_Service_vod</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Speaker_Training_vod</value>
            </filterItems>
            <filterItems>
                <field>EM_Catalog_vod__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event_Topic_vod, General_Topic_vod</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EM_Catalog_vod__c</referenceTo>
        <relationshipLabel>Speaker Qualifications</relationshipLabel>
        <relationshipName>EM_Speaker_Training_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rate_Type_vod__c</fullName>
        <description>Indicates the rate type for a service. This field is only used by Veeva Event Management.</description>
        <label>Rate Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hour_vod</fullName>
                </value>
                <value>
                    <fullName>Day_vod</fullName>
                </value>
                <value>
                    <fullName>Event_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rate_vod__c</fullName>
        <description>Indicates the rate for the service. This field is only used by Veeva Event Management.</description>
        <label>Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Speaker_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The speaker that was trained.</description>
        <label>Speaker</label>
        <referenceTo>EM_Speaker_vod__c</referenceTo>
        <relationshipName>Speaker_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_vod__c</fullName>
        <description>The starting effective date of the training or contracted service.</description>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The vendor that managed the training or contracting process.</description>
        <label>Vendor</label>
        <referenceTo>EM_Vendor_vod__c</referenceTo>
        <relationshipLabel>Speaker Qualifications</relationshipLabel>
        <relationshipName>Training_Vendor_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Speaker Qualification</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Qualification_Name_vod__c</columns>
        <columns>Speaker_vod__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SQ-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Speaker Qualifications</pluralLabel>
    <recordTypes>
        <fullName>Speaker_Service_vod</fullName>
        <active>true</active>
        <description>Used to store the services that a speaker is contracted for.</description>
        <label>Speaker_Service_vod</label>
    </recordTypes>
    <recordTypes>
        <fullName>Speaker_Training_vod</fullName>
        <active>true</active>
        <description>Used to store a speaker qualification, such as services provided or topics that the speaker has been trained on.</description>
        <label>Speaker_Training_vod</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>